--- a/mathematics-of-sound.ipynb
+++ b/mathematics-of-sound.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "## To use this slideshow:\n",
-    "- Run All, using the menu ite, Kernel/Restart & Run All\n",
+    "- Run All, using the menu item: Kernel/Restart & Run All\n",
     "- Return to this top cell\n",
     "- click on \"Slideshow\" menu item above, that looks like this:\n",
     "![](images/SlideIcon.png)"
